# ML_AI

./: .gitignore  house_predictions.ipynb
Autogen/: pyproject.toml
Autogen/1. First Autogen Agent/: 1_autogen_agent.py  Introduction to Agent.ipynb
Autogen/Multimodal Autogen/: multimodal_autogen.ipynb
llmops_vault/: main.py  pyproject.toml
llmops_vault/data/: agentic_ai.txt
llmops_vault/multidoc_chat/config/: config.yaml
llmops_vault/multidoc_chat/logger/: custom_logger.py
llmops_vault/multidoc_chat/src/document_chat/: retrieval.py
llmops_vault/multidoc_chat/src/document_ingestion/: data_ingestion.py
llmops_vault/multidoc_chat/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
llmops_vault/notebook/: data_ingestion.ipynb
