[project]
name = "llmops-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.8",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "openai>=2.20.0",
    "python-dotenv>=1.2.1",
    "rapidocr-onnxruntime>=1.4.4",
    "structlog>=25.5.0",
]
